<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <Button
        android:id="@+id/picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture" />
</LinearLayout>
